fixing the buttons on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -364,8 +364,8 @@ footer {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: #a52a2a; /* red/brown like your left button */
   color: white;
